<resources>
    <string name="app_name">Parstagram</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="user">User</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="parstagram">Parstagram</string>
    <string name="inbox">Inbox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>