<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/selector_nav_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_post"
        android:enabled="true"
        android:icon="@drawable/selector_nav_post"
        android:title="@string/post"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/selector_nav_user"
        android:title="@string/user"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="Logout"
        app:showAsAction="always" />
</menu>